LIST OF CHANGES FOR NPG-QC PACKAGE

 - autoqc check and autoqc objects: remove unused 'sequence_type' attribute
 - refactor autoqc check to use file_type attribute name instead of
     input_file_ext
 - tags_reporters check - remove hardcoded solexa path

release 58.9
 - move method for file name creation from SeqQC to autoqc so that it's
   more accessible
 - SeqQC
     - upstream_tags template - do not report potentially confusing tag index value when
        there is no id_run in the high-scoring tags table
 - remove misleading bam_flagstats check info

release 58.8
 - SeqQC
     - display insert size normal fit confidence and number of modes in the 
       summary table
     - do not show adaptor plots for low contamination
     - provenance in lane title not in every check
     - prepend all page titles with application name and version
     - different page title colour if running in non-live environment
     - use updated LIMs server url
     - link to NPG tracking web server running on the same host as this app
     - showing reference species and version below lane titles
 - Using container configuration for travis

release 58.7
 - bam_flagstats autoqc result object:
     new field, subset, added to be used instead of human_split
     human_split is retained for now to be compatible with existing data and code
 - autoqc loader will only load fields that correspond to database columns

release 58.6
 - Using "jquery-unveil" plugin for heatmaps
 - Removing data from DOM after passing them to local variables
 - Nulling variables after using them for bcviz to free memory
 - Moved simplified file name generation to this package
 - Removing gc bias and qX Yield checks when looking at non-run views
 - Removing collapser
 - Using latest release of bcviz (1.2.1)

release 58.5
 - stop using depricated Class::MOP::load_class method
 - use namespace::autoclean instead of "no Moose" in Moose objects
 - using make_immutable in Moose objects

release 58.4