@@ -239,6 +239,8 @@ my $extended_requires = {
                 'npg_tracking::data::reference::list'      => 0,
                 'npg_tracking::data::bait::find'           => 0,
                 'npg_tracking::data::snv::find'            => 0,
+                'npg_tracking::glossary::run'              => 0,
+                'npg_tracking::glossary::lane'             => 0,
                 'npg_tracking::glossary::tag'              => 0,
                 'npg_tracking::illumina::run::folder'      => 0,
                 'npg_tracking::illumina::run::short_info'  => 0,
